# python-package-template

./: .gitmessage.txt  .pre-commit-config.yaml  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  pypi-publish.yml  pytest.yml
docs/: markdown.md
src/python_package_template/: __init__.py
tests/: test_python_package_template.py
